Added dummy button, removed filter on view.py bloq

--- a/corrida/templates/bloques/bloques_disponibles.html
+++ b/corrida/templates/bloques/bloques_disponibles.html
@@ -56,6 +56,7 @@ $(document).ready(function() {
                 <th>Ancho</th>
                 <th>Alto</th>
                 <th>Peso</th>
+                <th>Baja</th>
                 
             </tr>
         </thead>
@@ -70,6 +71,7 @@ $(document).ready(function() {
                 <td>{{bloques.ancho_caliente}} </td>
                 <td>{{bloques.alto_caliente}} </td>
                 <td>{{bloques.peso_caliente}} </td>
+                <td class="text-center"><a class="btn btn-danger" href="#" role="button"> Borrar </a></td>
                
             </tr>
            {%endfor%}
@@ -82,6 +84,7 @@ $(document).ready(function() {
                 <th>Ancho</th>
                 <th>Alto</th>
                 <th>Peso</th>
+                <th>Baja</th>
                     
             </tr>
         </tfoot>
